# grimoire

./: .gitignore  .mcp.json  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PUBLISHING.md  README.md  ROADMAP.md  SETUP.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  refresh-api-reference.yml
agents/: rattle-auditor.md  rattle-bom-architect.md  rattle-config-builder.md  rattle-consultant.md  rattle-onboarder.md  rattle-pricing-architect.md  rattle-quote-author.md  rattle-techdoc-auditor.md  rattle-techdoc-author.md  rattle-translator.md
commands/: rattle-analyse.md  rattle-audit-techdoc.md  rattle-audit.md  rattle-build-bom.md  rattle-build-offer.md  rattle-build-quote.md  rattle-build-techdoc.md  rattle-ingest.md  rattle-onboard.md  rattle-price.md  rattle-suggest-config.md  rattle-translate.md
docs/: API_AUDIT.md  API_REFERENCE.md  API_REMEDIATION.md  openapi.json
docs/api-supplement/: safety-reference.md
examples/: README.md  apply-operations.json  audit-findings.json  offer-template.json  pricelist-anti-patterns.json  pricelist-input.json  recommendation.json  source-mapping.json  tenant-profile.md  variant-bom.json
mcp/: server.mjs
memory/: README.md
rattle_api/: knowledge.py  main.py  memory.py  source.py  tasks.py
schemas/: apply-operations.schema.json  audit-findings.schema.json  offer-template.schema.json  recommendation.schema.json  source-mapping.schema.json  variant-bom.schema.json
scripts/: build_api_reference.py  mcp_smoke.mjs  package_skills.py  rattle_api_conformance.py  validate_bundle.py
skills/rattle-api/: SKILL.md
skills/rattle-api/references/: api-reference.md  client-patterns.md  openapi.json
skills/rattle-apply-config/: SKILL.md
skills/rattle-apply-config/references/: operations-contract.md
skills/rattle-apply-config/scripts/: validate_recommendation.py
skills/rattle-audit/: SKILL.md
skills/rattle-audit/references/: audit-runner.md
skills/rattle-audit/scripts/: audit_runner.py
skills/rattle-bom-builder/: SKILL.md
skills/rattle-bom-builder/references/: api-endpoints.md  bom-explosion.md  data-model.md  numbered-options.md  option-scalings.md  usage-subclauses.md
skills/rattle-bom-builder/scripts/: validate_variant_bom.py
skills/rattle-configurator/: SKILL.md
skills/rattle-configurator/references/: anti-patterns.md  configuration-rules.md  data-model.md  structural-checks.md  system-prompts.md
skills/rattle-crm-quotes/: SKILL.md
skills/rattle-crm-quotes/references/: line-items.md  quote-lifecycle.md
skills/rattle-document-templates/: SKILL.md
skills/rattle-ghs-statements/: SKILL.md
skills/rattle-ghs-statements/references/: ghs-mapping.md  hp-statement-codes.md  hp-statement-locales.md
skills/rattle-i18n/: SKILL.md
skills/rattle-i18n/references/: glossary.md  translation-policy.md
skills/rattle-ingest/: SKILL.md
skills/rattle-ingest/references/: column-roles.md  sheet-shapes.md
skills/rattle-ingest/scripts/: profile_source.py
skills/rattle-onboarding/: SKILL.md
skills/rattle-onboarding/references/: configurator-settings.md  day-zero-checklist.md
skills/rattle-pricelist-analysis/: SKILL.md
skills/rattle-pricelist-analysis/scripts/: detect_anti_patterns.py
skills/rattle-pricing/: SKILL.md
skills/rattle-pricing/references/: advanced-prices.md  price-resolution.md
skills/rattle-safety-notices/: SKILL.md
skills/rattle-safety-notices/references/: iso-7010-symbols.md  safe-principle.md  signal-words.md
skills/rattle-suggest-config/: SKILL.md
skills/rattle-techdoc/: SKILL.md
skills/rattle-techdoc-language/: SKILL.md
skills/rattle-techdoc-language/references/: locales.md  style-guide.md
skills/rattle-techdoc/references/: audit-checks.md  chapter-reference.md  editorjs-blocks.md  legal-basis.md
skills/rattle-techdoc/scripts/: inventory_techdocs.py
skills/rattle-tenant-memory/: SKILL.md
tests/: test_knowledge.py  test_memory.py  test_tasks.py
